crates/analyzer/tests/snapshots/errors__call_create_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: incorrect type for argument to `Bar.create`
  ┌─ compile_errors/call_create_with_wrong_type.fe:6:20
  │
6 │         Bar.create(true)
  │                    ^^^^ this has type `bool`; expected a number

error: `create` expects 1 argument, but 0 were provided
  ┌─ compile_errors/call_create_with_wrong_type.fe:7:13
  │
7 │         Bar.create()     # agroce #447
  │             ^^^^^^-- supplied 0 arguments
  │             │      
  │             expects 1 argument


